2008-03-22  Johan Dahlin  <johan@gnome.org>

	* gio/ginputstream.override:
	* gio/gio.override:
	* tests/test_gio.py:

	Make read_finish() return the string, remove the get_buffer method.
	This is more pythonic, as it mimics the normal read() behavior of 
	python.
	Update the tests and use a separate marshaller for read.

2008-03-21  Johan Dahlin  <johan@gnome.org>

	* gobject/__init__.py:
	* tests/test_properties.py:
	Allow gobject.property work with subclasses. Add tests.

	(#523352, Tomeu Vizoso)

2008-03-10  Johan Dahlin  <johan@gnome.org>

	* configure.ac: Require gio and giounix 2.15.7.

2008-03-09  Johan Dahlin  <johan@gnome.org>

	* gio/gio-types.defs:
	* gio/gio.defs:
	* tests/test_gio.py:
	Update to SVN of gio:
	g_file_contains_file -> g_file_has_prefix
	can_seek and can_truncate are now only on the GSeekable interface
	Add tests

	(#521207, Thomas Leonard)

2008-03-08  Johan Dahlin  <jdahlin@async.com.br>

	* gio/ginputstream.override:
	Pass in l instead of i to PyArg_ParseTupleAndKeywords when
	parsing a long. Fixes the build on 64-bit systems.
	(#521165, Thomas Leonard)

2008-03-02  Johan Dahlin  <johan@gnome.org>

	* Makefile.am: Dist .m4 files.
	(#496011, Ed Catmur)

2008-03-02  Paul Pogonyshev  <pogonyshev@gmx.net>

	* gobject/gobjectmodule.c (REGISTER_TYPE): Never override customly
	set 'tp_new' and 'tp_alloc'.

2008-02-01  Dan Winship  <danw@gnome.org>

	* pygobject-2.0.pc.in (defsdir): Add this so other bindings can
	find gio.defs

2008-01-21  Johan Dahlin  <johan@gnome.org>

	* gio/gio.override (async_result_callback_marshal): 
	Don't assume the buffer is set, use Py_XINCREF instead of Py_INCREF.

	* gio/Makefile.am:
	* gio/ginputstream.override:
	* gio/goutputstream.override:
	* gio/gvolumemonitor.override:
	* gio/gfile.override:
	* tests/test_gio.py:
	Implement and test GFile.read_async. Use try/finally to always quit
	the mainloop, even if the test fail.
	Update source comment headers.

2008-01-20  Johan Dahlin  <johan@gnome.org>
